# speechBCI-replication

./: environment.yml  environment_310.yml  pyproject.toml  requirements.txt
neuralDecoder/: lrSchedule.py  neuralSequenceDecoder.py
tutorials/: 01_tutorial_example_psth.py  02_tutorial_example_saliency_maps.py  paths.py
