[tool.poetry]
name = "speechbci"
version = "0.1.0"
description = ""
authors = ["Shawn Hsu <goodshawn12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
scipy = "^1.11.4"
omegaconf = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
